# minard

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.local.yml  nginx-local.conf  package-lock.json  package.json  spago.yaml
database/: .gitignore  analyze-dimensions.cjs  compare-dbs.cjs  query-detail.cjs  query-examples.cjs  query-kinds.cjs  query-typeclasses.cjs  spago.yaml
database/schema/: README.md  add-coupling-metrics.sql  add-package-sets.sql  add-site-explorer.sql  init-v2.sql  unified-schema.sql
docs/: LOADER-SPEC.md
frontend/: .dockerignore  Dockerfile  package.json  spago.yaml
frontend/public/: app.js  index.html  sig-test-bundle.js  (+3 more)
minard-cst/: run.js  spago.yaml
minard-loader/: .gitignore  Cargo.toml  M2-SPEC.md  M3-SPEC.md
minard-loader/src/: config.rs  error.rs  git.rs  lib.rs  main.rs  progress.rs
minard-loader/src/cache/: mod.rs
minard-loader/src/db/: ids.rs  insert.rs  mod.rs  schema.rs
minard-loader/src/loader/: detect.rs  discovery.rs  mod.rs  pipeline.rs  postload.rs
minard-loader/src/model/: entities.rs
minard-loader/src/parse/: corefn.rs  cst_spans.rs  docs.rs  mod.rs  spago_lock.rs  type_render.rs
minard-loader/src/registry/: mod.rs
server/: Dockerfile  package-lock.json  package.json  spago.yaml
site-explorer/: .gitignore  Dockerfile  bundle.js  compare-routes.js  discovered-routes.csv  package-lock.json  package.json  run.js  site-explorer.html  spago.yaml  spider.js
tools/: README.md  minard-annotate  minard-reach
type-sig-viz/: spago.yaml
vscode-extension/: package-lock.json  package.json
(+108 files in other folders)
