[package]
name = "minard-loader"
version = "0.1.0"
edition = "2021"
description = "Fast Rust loader for PureScript project data into DuckDB"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.1", features = ["bundled"] }
rayon = "1.10"
indicatif = "0.17"
thiserror = "2"
anyhow = "1"
walkdir = "2"

[profile.release]
opt-level = 3
lto = true
